feat(QTDI-675): changes in sample checkpoint
- add README.md